kubernetes_manifests/jenkins/gluster-endpoints.yml
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: devops
spec:
  ports:
  - port: 1

---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: devops
subsets:
  - addresses:
      - ip: 10.100.8.147
      - ip: 10.100.8.148
      - ip: 10.100.8.163
    ports:
      - port: 1
